Fix font rendering bug on Safari

--- a/demo/stylesheets/main.css
+++ b/demo/stylesheets/main.css
@@ -78,7 +78,8 @@ nav {
   z-index: 2000;
   -webkit-transform: translate(0, 0);
   -moz-transform: translate(0, 0);
-  transform: translate(0, 0); }
+  transform: translate(0, 0);
+  -webkit-font-smoothing: subpixel-antialiased; }
   .section-nav.is-floating {
     position: fixed;
     top: 20px; }
